# py_collector

./: .gitignore  Readme.MD  py collector.ipynb  py_collector.ipynb  setup.cfg  setup.py
examples/: energy.py  tiktok.py  weather.py
src/: py_collector.py
src/py_collector/: py_collector.py
tests/: example.py
