[metadata]
name = py_collector
version = 0.0.1
author = Michael Watson-Fore
author_email = michael-fore@sbcglobal.net
description = A small data collection package for small to medium data collection efforts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.2

[options.packages.find]
where = src